kubernetes-ingress-samples/2-ingress-sample-two.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kube-aci-demo-two-two
  name: kube-aci-demo-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-aci-demo-two
  template:
    metadata:
      labels:
        app: kube-aci-demo-two
    spec:
      containers:
      - image: microsoft/aci-helloworld
        name: kube-aci-demo-two
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-aci-demo-two
  name: kube-aci-demo-two
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kube-aci-demo-two
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-aci-demo-two
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /v2
        backend:
          serviceName: kube-aci-demo-two
          servicePort: 80
